syntax = "proto3";
package great;
option  java_package = "proto.greet";
//option java_multiple_files = true;

message  GreetingName {
    string firstName = 1;
    string lastName = 2;
}

message GreetRequest {
    GreetingName greetings = 1;
}

message  GreetResponse {
    string result = 1;
}

service  GreetService {
    //unary
    rpc greet (GreetRequest) returns (GreetResponse) {};

    rpc greetManyTimes(GreetRequest) returns (stream GreetResponse){};
}